Fixed two errors

--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -7,6 +7,7 @@ chapterPreamble()
 
 ```{r load-pkg-data1}
 library(mia)
+data("GlobalPatterns", package = "mia")
 data("peerj13075", package = "mia")
 tse <- peerj13075
 ```
@@ -62,6 +63,7 @@ hclust.out
 
 Once the clustering on the samples is done, we can also plot the clusters.
 ```{r bluster-sample-plot}
+library(scater)
 # Add the MDS dimensions for plotting
 tse <- runMDS(tse,
   assay.type = "relabundance", FUN = vegan::vegdist,
