Removed the dynamic tree cut to avoid dependency

--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -81,7 +81,7 @@ To change the clustering parameters, simply change the parameters in
 # More complex use of the algorithm with another method and cut height.
 # We also add the full parameter to get the full hierarchical clustering
 # information to plot the dendrogram
-hclust.out <- clusterRows(assay, HclustParam(method = "complete", cut.dynamic = TRUE), full = TRUE)
+hclust.out <- clusterRows(assay, HclustParam(method = "complete"), full = TRUE)
 hclust.out$clusters
 
 # Add data to the TSE
