--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -23,7 +23,7 @@ composition. There are multiple clustering algorithms available.
 *bluster* is a Bioconductor package specialized in clustering. It offers 
 multiple algorithms such as hierarchical clustering, DBSCAN, K-means, 
 amongst others. The first thing to do when using this package is to load 
-it, and apply transformation to the data.
+it, and transform the data if necessary, depending on your analysis goals.
 
 ```{r load_bluster}
 # Load dependencies
@@ -36,7 +36,7 @@ if (!require(bluster)) {
 tse <- transformCounts(tse, method = "relabundance")
 ```
 
-The clustering can be done on the features or the samples.
+The clustering can be done on features or samples.
 
 ### Sample clustering
 
