--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -112,7 +112,7 @@ or online channels.
 
 
 
-## Session Info {-}
+### Session Info {-}
 
 ```{r sessionInfo, echo=FALSE, results='asis'}
 prettySessionInfo()
