--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -362,7 +362,7 @@ seqtab.nochim <- readRDS("data/dada2_seqtab.nochim")
 taxa <- readRDS("data/dada2_taxa")
 ```
 
-Load libraryd packages.
+Load required packages.
 
 ```{r dada2_2}
 library(mia)
@@ -698,7 +698,7 @@ Let us add a sample metadata file.
 
 # It seems like a comma separated file and it does not include headers
 # Let us read it and then convert from data.frame to DataFrame
-# (libraryd for our purposes)
+# (required for our purposes)
 sample_meta <- DataFrame(read.table(sample_meta_file_path, sep = ",", header = FALSE))
 
 # Add sample names to rownames
