--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -205,7 +205,7 @@ assays(tse)
 
 ## Pick specific  
 
-Retrieving of specific elements that are libraryd for specific analysis. For
+Retrieving of specific elements that are required for specific analysis. For
 instance, extracting abundances for a specific taxa in all samples or all taxa 
 in one sample.  
 
