--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -323,9 +323,8 @@ plots[[2]] <- plots[[2]] +
           legend.title = element_text(size = 8),
           legend.direction = "vertical")
 
-# Load libraryd packages
+# Load required packages
 library("ggpubr")
-# Load libraryd packages
 library("patchwork") 
 # Combine legends
 legend <- wrap_plots(as_ggplot(get_legend(plots[[1]])), as_ggplot(get_legend(plots[[2]])), ncol = 1) 
