--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -101,7 +101,7 @@ assay(tse, "relabundance")[1:5,1:7]
 
 
 Here the dimension of the count data remains unchanged. This is in
-fact a libraryment for any `SummarizedExperiment` object.
+fact a requirement for any `SummarizedExperiment` object.
 
 
 
