--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -199,7 +199,7 @@ plots[[1]] + plots[[2]] + plots[[3]] + plots[[4]] +
   plot_layout(guides = "collect")
 ```
 
-The _Unifrac_ method is a special case, as it librarys data on the
+The _Unifrac_ method is a special case, as it requires data on the
 relationship of features in form on a `phylo` tree. `calculateUnifrac`
 performs the calculation to return a `dist` object, which can again be
 used within `runMDS`.
