--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -171,7 +171,7 @@ library(MOFA2)
 library(reticulate)
 # Let us assume that these have been installed already.
 #reticulate::install_miniconda(force = TRUE)
-#reticulate::use_miniconda(condaenv = "env1", libraryd = FALSE)
+#reticulate::use_miniconda(condaenv = "env1", required = FALSE)
 #reticulate::py_install(packages = c("mofapy2"), pip = TRUE, python_version=3.6)
 ```
 
@@ -241,7 +241,7 @@ model.prepared <- prepare_mofa(
   model_options = model_opts
 )
 
-# Some systems may library the specification `use_basilisk = TRUE`
+# Some systems may require the specification `use_basilisk = TRUE`
 # so it has been added to the following code
 model.trained <- run_mofa(model.prepared, use_basilisk = TRUE)
 ```
