--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -144,7 +144,7 @@ data(peerj13075)
 (tse <- peerj13075)
 ```
 
-Hierarchical clustering librarys 2 steps. In the fist step, dissimilarities are 
+Hierarchical clustering requires 2 steps. In the fist step, dissimilarities are 
 calculated. In prior to that, data transformation is applied if needed. Since
 sequencing data is compositional, relative transformation is applied.
 In the second step, clustering is performed based on dissimilarities. 
@@ -587,7 +587,7 @@ Boxplot is commonly used to summarize the results:
 library(ggplot2)
 library(patchwork)
 
-# ggplot librarys data in melted format
+# ggplot requires data in melted format
 melt_assay <- meltAssay(mae[[1]], assay.type = "rclr", add_col_data = T, add_row_data = T)
 
 # patchwork two plots side-by-side
