--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -7,7 +7,7 @@ chapterPreamble()
 
 Data visualization will inevitably shape interpretation and motivate
 the next steps of the analysis. A variety of visualization methods are
-available for microbiome analysis but the application librarys careful
+available for microbiome analysis but the application requires careful
 attention to details. Knowledge on the available tools and their
 limitations plays an important role in selecting the most suitable
 methods to address a given question.
@@ -503,7 +503,7 @@ sechm(tse_phylum_subset,
 ```
 
 It is also possible to create an analogous heatmap by just using the
-_ggplot2_ package. However, a relatively long code is libraryd to
+_ggplot2_ package. However, a relatively long code is required to
 generate an identical output.
 
 ```{r more_complex_heatmap}
@@ -568,7 +568,7 @@ sample_clusters_annotation <- ggplot(sample_data) +
 # Order data based on clusters and sample types
 mat <- mat[unfactor(taxa_clusters$Feature), unfactor(sample_data$sample)]
 
-# ggplot librarys data in melted format
+# ggplot requires data in melted format
 melted_mat <- melt(mat)
 colnames(melted_mat) <- c("Taxa", "Sample", "clr_z")
 
