--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -613,7 +613,7 @@ matrices in general.
 # (Only 1st experiment  was ordered in cobiclust step leading to unequal order)
 mae[[1]] <- mae[[1]][, colnames(mae[[2]])]
 
-# Make rownames unique since it is library by other steps
+# Make rownames unique since it is require by other steps
 rownames(mae[[1]]) <- make.unique(rownames(mae[[1]]))
 # Calculate correlations
 corr <- getExperimentCrossCorrelation(mae, 1, 2,
