--- a/22_communitytyping.Rmd
+++ b/22_communitytyping.Rmd
@@ -155,9 +155,7 @@ task.
 Installing package:
 
 ```{r}
-if(!library(bluster)){
-  BiocManager::install("bluster")
-}
+library(bluster)
 ```
 
 The algorithm used is "short random walks" [@Pons2006]. Graph is
