--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -140,6 +140,12 @@ dataset that merely has microbial abundances in a TSE object as well
 as a grouping variable in the sample data. We simplify the examples by
 only including two of the three groups.
 
+```{r install-pkg, include = FALSE}
+if(!require(GUniFrac)){
+  install.packages("GUniFrac")
+}
+```
+
 
 ```{r load-pkg-data}
 library(mia)
