--- a/40_machine_learning.Rmd
+++ b/40_machine_learning.Rmd
@@ -19,6 +19,16 @@ data (e.g., k-means clustering).
 
 ## Supervised machine learning
 
+```{r install-pkg, include = FALSE}
+if(!require(mikropml)){
+  install.packages("mikropml")
+}
+
+if(!require(MLeval)){
+  install.packages("MLeval")
+}
+```
+
 "Supervised" means that the training data is introduced before. The training data
 contains labels (e.g., patient status), and the model is fitted based on the 
 training data. After fitting, the model is utilized to predict labels of data whose 
