Improve content on Hintikka and outreach

--- a/80_training.Rmd
+++ b/80_training.Rmd
@@ -47,9 +47,9 @@ We encourage to familiarize with the material and test examples in advance.
 
  * [Short online videos](https://www.youtube.com/playlist?list=PLjiXAZO27elAJEptP59BN3whVJ61XIkST) on microbiome data science with R/Bioconductor  
 
- * [Lecture slides](https://microbiome.github.io/)
+ * [Quarto presentations](https://microbiome.github.io/outreach/index.html) and other 
  
- * [miaverse presentations](https://microbiome.github.io/outreach/index.html) and other [outreach](https://github.com/microbiome/outreach)
+ * [Other outreach material](https://github.com/microbiome/outreach)
 
  * [Orchestrating Microbiome Analysis with R/Bioconductor (OMA)](https://microbiome.github.io/OMA/) (this book)
 
