--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -274,8 +274,9 @@ help(GlobalPatterns)
 #### HintikkaXOData {#hintikka-desc}
 
 [HintikkaXOData](https://microbiome.github.io/microbiomeDataSets/reference/HintikkaXOData.html)
-is a MAE derived from a study about the effects of fat diet and prebiotics on the
-microbiome of rat models [@ijerph18084049]. The dataset is briefly presented in
+is derived from a study about the effects of fat diet and prebiotics on the
+microbiome of rat models [@Hintikka2021]. It is available in the MAE data
+container for R. The dataset is briefly presented in
 [these slides](https://microbiome.github.io/outreach/hintikkaxo_presentation.html).
 
 
