--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -19,54 +19,42 @@ discovery of novel biomarkers. In this section we demonstrate common
 multi-assay data integration tasks.
 
 Cross-correlation analysis is a straightforward approach that can
-reveal assocation strengths and types between data sets. For instance,
-we can analyze if higher presence of a specific taxon equals to higher
+reveal strength and type of assocations between data sets. For instance,
+we can analyze if higher presence of a specific taxon relates to higher
 levels of a biomolecule.
 
-The analyse can be facilitated by the multi-assay data containers,
+The analyses can be facilitated by the multi-assay data containers,
 _TreeSummarizedExperiment_ and _MultiAssayExperiment_. These are
 scalable and contain different types of data in a single container,
 making this framework particularly suited for multi-assay microbiome
 data incorporating different types of complementary data sources in a
-single reproducible workflow. Th different solutions for varying data
-integration needs are discussed in more detail in Section
+single reproducible workflow. Solutions to a number of data
+integration problems are discussed in more detail in Section
 \@ref(containers). Another experiment can be stored in _altExp_ slot
-of SE data container or both experiments can be stored side-by-side in
-MAE data container (see the sections \@ref(alt-exp) and \@ref(mae) to
-learn more about altExp and MAE objects, respectively). Different
-experiments are first imported into these data containers similarly to
+of SE data container. Alternatively, both experiments can be stored
+side-by-side in a MAE data container (see sections \@ref(alt-exp) and \@ref(mae)
+to learn more about altExp and MAE objects, respectively). Different
+experiments are first imported as single-assay data containers similarly to
 the case when only one experiment is present. After that, the
-different experiments can be combined into the same multi-assay data
-container. The result is one TreeSE object with alternative experiment in
-altExp slot, or MAE object with multiple experiment in its experiment
-slot, for instance.
+different experiments can be combined into one multi-assay data
+container. The result is a MAE object with multiple experiments in its
+experiment slot, or a TreeSE object with alternative experiments in
+the altExp slot.
 
-As an example data, we use data from the following publication: Hintikka L
-_et al._ (2021) Xylo-oligosaccharides in prevention of hepatic
+As an example, we use a dataset from the following publication:
+[-@Hintikka2021] Xylo-oligosaccharides in prevention of hepatic
 steatosis and adipose tissue inflammation: associating taxonomic and
-metabolomic patterns in fecal microbiota with biclustering
-
-[@Hintikka2021].
-
-In this study, mice were fed with high-fat and low-fat diets with or
-without prebiotics.  The purpose of this was to study whether prebiotics
-reduce negative impacts of a high-fat diet.
+metabolomic patterns in fecal microbiota with biclustering.
+In this study, mice were fed either with a high-fat or a low-fat diet,
+and with or without prebiotics, for the purpose studying whether prebiotics
+attenuate the negative impact of a high-fat diet on health.
 
 This example data can be loaded from microbiomeDataSets. The data is
 already in MAE format. It includes three different experiments:
 microbial abundance data, metabolite concentrations, and data about
-different biomarkers.
-=======
-[@Hintikka2021]. In this article, mice were fed with high-fat and
-low-fat diets with or without prebiotics.  The purpose of this was to
-study if prebiotics would reduce the negative impact of high-fat diet.
-
-This example data is readily available in the MultiAssayExperiment
-format. It includes three different experiments: microbial abundance
-data, metabolite concentrations, and data about different
-biomarkers. If you like to construct the same data object from the
-original files instead, [Here](https://microbiome.github.io/OMA/containers.html#loading-experimental-microbiome-data) 
-you can find help for importing data into a SE object.
+different biomarkers. If you like to construct the same data object from the
+original files instead, [here](https://microbiome.github.io/OMA/containers.html#loading-experimental-microbiome-data) 
+you can find help for importing data into an SE object.
 
 ```{r cross-correlation1}
 # Load the data
